objects/pse__Milestone__c.object
<CustomObject>
    <fields>
        <fullName>pse__Status__c</fullName>
        <inlineHelpText>The status of the milestone. You can set this to Planned, Open, Approved or Canceled. The Milestone must be set to Approved to be able to invoice.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Planned</fullName>
                    <default>true</default>
                    <label>Planned</label>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Billed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Target_Date__c</fullName>
        <inlineHelpText>Target date for completion of the milestone.</inlineHelpText>
        <label>Target Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Timecard_External_Costs_In_Financials__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>External timecard costs logged against the milestone that can be viewed in project and RPG actuals.</inlineHelpText>
        <label>Timecard External Costs In Financials</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Timecard_External_Costs_Submitted__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>External timecard costs logged against the milestone.</inlineHelpText>
        <label>Timecard External Costs Submitted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Timecard_Internal_Costs_In_Financials__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>Internal timecard costs logged against the milestone that can be viewed in project and RPG actuals.</inlineHelpText>
        <label>Timecard Internal Costs In Financials</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Timecard_Internal_Costs_Submitted__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>Internal timecard costs logged against the milestone.</inlineHelpText>
        <label>Timecard Internal Costs Submitted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Total_Completed_Points_from_Tasks__c</fullName>
        <inlineHelpText>Total of points on completed project tasks rolled-up from the project.</inlineHelpText>
        <label>Total Completed Points from Tasks</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Total_Number_of_Completed_Tasks__c</fullName>
        <inlineHelpText>Total number of completed project tasks rolled-up from the project.</inlineHelpText>
        <label>Total Number of Completed Tasks</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Total_Number_of_Tasks__c</fullName>
        <inlineHelpText>Total number of project tasks rolled-up from the project.</inlineHelpText>
        <label>Total Number of Tasks</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Total_Points_from_Tasks__c</fullName>
        <inlineHelpText>Total of points on all project tasks rolled-up from the project.</inlineHelpText>
        <label>Total Points from Tasks</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Transaction ID for the Milestone.</inlineHelpText>
        <label>Transaction</label>
        <referenceTo>pse__Transaction__c</referenceTo>
        <relationshipLabel>Milestone</relationshipLabel>
        <relationshipName>Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Vendor_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The vendor account to use for vendor invoicing</description>
        <inlineHelpText>The vendor account to use for vendor invoicing</inlineHelpText>
        <label>Vendor Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vendor Milestones</relationshipLabel>
        <relationshipName>Vendor_Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Vendor_Invoice_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Invoice Item</label>
        <referenceTo>pse__Vendor_Invoice_Item__c</referenceTo>
        <relationshipLabel>Milestones</relationshipLabel>
        <relationshipName>Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Milestone</label>
    <listViews>
        <fullName>pse__All</fullName>
        <columns>NAME</columns>
        <columns>pse__Project__c</columns>
        <columns>pse__Transaction__c</columns>
        <columns>pse__Milestone_Amount__c</columns>
        <columns>pse__Milestone_Cost__c</columns>
        <columns>pse__Status__c</columns>
        <columns>pse__Target_Date__c</columns>
        <columns>pse__Actual_Date__c</columns>
        <columns>pse__Requires_Customer_Sign_off__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Milestone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Milestones</pluralLabel>
    <recordTypes>
        <fullName>TR_PS_Enterprise_Milestone</fullName>
        <active>true</active>
        <label>TR PS Enterprise Milestone</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>pse__PSE_Approver_Share__c</fullName>
        <label>PSE Approver Share</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>pse__PSE_Member_Share__c</fullName>
        <label>PSE Member Share</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>pse__PSE_PM_Share__c</fullName>
        <label>PSE PM Share</label>
    </sharingReasons>
    <validationRules>
        <fullName>pse__Invoiced</fullName>
        <active>true</active>
        <description>Invoice Number or Date is not allowed on record unless it is invoiced</description>
        <errorConditionFormula>(pse__Invoice_Number__c != null ||
pse__Invoice_Date__c != null) &amp;&amp; pse__Invoiced__c = false</errorConditionFormula>
        <errorMessage>Invoice Number or Date is not allowed on record unless it is invoiced</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Milestone_Billing_Requires_Inclusion</fullName>
        <active>true</active>
        <description>For a Milestone to be marked as Billed, it must also be marked as Included In Financials and Approved.</description>
        <errorConditionFormula>AND(pse__Billed__c,OR(NOT(pse__Include_In_Financials__c),NOT(pse__Approved__c)))</errorConditionFormula>
        <errorDisplayField>pse__Billed__c</errorDisplayField>
        <errorMessage>For a Milestone to be marked as Billed, it must also be marked as Included In Financials and Approved.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Milestone_Invoicing_Requires_Billing</fullName>
        <active>true</active>
        <description>For a Milestone to be marked as Invoiced, it must also be marked as Billed.</description>
        <errorConditionFormula>AND(pse__Invoiced__c,NOT(pse__Billed__c))</errorConditionFormula>
        <errorDisplayField>pse__Invoiced__c</errorDisplayField>
        <errorMessage>For a Milestone to be marked as Invoiced, it must also be marked as Billed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Milestone_Project_is_Constant</fullName>
        <active>true</active>
        <description>A Milestone&apos;s Project field value may not be blank and may not be updated once set (unless Admin Global Edit is checked, Audit Notes are provided, and Actuals Calculation Mode is Scheduled).</description>
        <errorConditionFormula>OR(ISNULL(pse__Project__c),(pse__Project__c=&apos;&apos;),AND(ISCHANGED(pse__Project__c),OR(NOT(pse__Admin_Global_Edit__c),ISNULL(pse__Audit_Notes__c),ISBLANK(TRIM(pse__Audit_Notes__c)))))</errorConditionFormula>
        <errorDisplayField>pse__Project__c</errorDisplayField>
        <errorMessage>A Milestone&apos;s Project field value may not be blank and may not be updated once set (unless Admin Global Edit is checked, Audit Notes are provided, and Actuals Calculation Mode is Scheduled).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Vendor_Invoice_Constant</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISCHANGED(pse__Vendor_Invoice_Item__c),LEN(PRIORVALUE(pse__Vendor_Invoice_Item__c))&gt;0)</errorConditionFormula>
        <errorDisplayField>pse__Vendor_Invoice_Item__c</errorDisplayField>
        <errorMessage>Vendor Invoice Item cannot be changed</errorMessage>
    </validationRules>
</CustomObject>